--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -10704,6 +10704,11 @@ color:#1a1a1a !important;
 color:#1a1a1a !important;
 }
 
+.bg-sold{
+background-color: #00cc00 !important;
+color: #ffffff !important;
+}
+
 
 
 
