--- a/src/main/resources/templates/fragments/userdashboardnav.html
+++ b/src/main/resources/templates/fragments/userdashboardnav.html
@@ -42,7 +42,7 @@
         </li>
         <!-- Nav Item - Charts -->
         <li class="nav-item">
-            <a class="nav-link" href="charts.html">
+            <a class="nav-link" th:href="@{useranalytics}">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>Analytics</span></a>
         </li>
