added some dashboard analytics

--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -10704,7 +10704,7 @@ color:#1a1a1a !important;
 color:#1a1a1a !important;
 }
 
-.bg-sold{
+.bg-sold .btn-success{
 background-color: #00cc00 !important;
 color: #ffffff !important;
 }
