--- a/src/main/resources/templates/fragments/mybusinesses.html
+++ b/src/main/resources/templates/fragments/mybusinesses.html
@@ -21,7 +21,7 @@
                   <td>2010/07/14</td>
                   <td class="text-success"><a class="btn rounded-0 bg-sold mr=2 " href=""><i class="fas fa-fw fa-check-circle"></i> Sold</a> </td>
                   <td>
-                    <a class="btn btn-danger mr=2 mb-2" href="">  <i class="fas fa-fw fa-trash"></i> Delete</a>  <a class="btn  btn-success mr=2 mb-2" href="">  <i class="fas fa-fw fa-pen"></i> Edit</a>
+                    <a class="btn btn-danger mr=2 mb-2" href="">  <i class="fas fa-fw fa-trash"></i> Delete</a>  <a class="btn  btn-success mr=2 mb-2" th:href="@{businessdetails}">  <i class="fas fa-fw fa-pen"></i> Edit</a>
                   </td>
                 </tr>
 
